Add set_relay functionality, fix below zero temperature handling
